// export default interface IMecanismoControl extends IActivable {
//   estaActivo(): boolean;
//   activar(): void;
//   desactivar(): void;
// }
import IActivable from "./IActivable";
export default interface IMecanismoDeControl extends IActivable {}
