const enum TipoAlerta {
  CRITICA,
  ESTANDAR,
}
