export default interface IEncendible {
  encender(): void;
  apagar(): void;
  estaEncendido(): boolean;
}
